--- a/src/components/appStyle.module.css
+++ b/src/components/appStyle.module.css
@@ -2,26 +2,100 @@ body{
     background-color: rgb(96,95,109)
 }
 .mainContainer{
-    margin:50px;
+    margin:0 auto;
     border: 4px solid;
+    margin-top:40px;
     border-radius: 4px;
     background-color: rgb(55,58,93);
+    width: 500px;
 }
 .mainHeading{
-    display:inline;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    padding-top: 20px;
+    padding-left: 5px;
+    color:rgb(255,255,251)
+}
+.searchBox{
+    border-radius: 5px;
+    border:none;
+    font-family: 'Varela Round', sans-serif;
+}
+.searchBoxnotify{
+    border-radius: 5px;
+    border:none;
+    box-shadow: 0 0 2.5px 2.5px red;
+    font-family: 'Varela Round', sans-serif;
 
 }
+.button{
+    border-radius: 5px;
+    border:none;
+    font-size: 10px;
+    margin-top: 0px;
+    margin-right: 5px;
+    margin-left: 5px;
+    height:16px;
+    font-family: 'Varela Round', sans-serif;
+    background-color:rgb(255,255,255);
+}
+.button2{
+    border-radius: 5px;
+    border:none;
+    font-size: 10px;
+    margin-top: 0px;
+    margin-right: 5px;
+    margin-left: 5px;
+    box-shadow: 0 0 2.5px 2.5px red;
+    height:16px;
+    font-family: 'Varela Round', sans-serif;
+    background-color:rgb(255,255,255);
+}
+.todos{
+    min-height:30px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom:20px;
+    width:60%;
+    border:none;
+    border-radius: 5px;
+    background-color: rgb(255,255,255);
+    position: relative;
+}
+.headContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .titleicon{
-    width:35px;
+    width:50px;
+    display: inline;
 
 }
 .toggleicon{
-    width:24px;
+    width:15px;
     display:inline !important;
+    position: absolute;
+    top:10px;
+    left:30px;
 }
 .deleteicon{
-    width:23px;
+    width:15px;
+    position: absolute;
+    top:10px;
+    right:10px;
 }
 .editicon{
     width:13px; 
+    position: absolute;
+    top:10px;
+    right:25px;
+}
+.content{
+    padding-top: 5px;
+    font-family: 'Varela Round', sans-serif;
+    
 }
