--- a/src/components/appStyle.module.css
+++ b/src/components/appStyle.module.css
@@ -99,3 +99,13 @@ body{
     font-family: 'Varela Round', sans-serif;
     
 }
+.emoji{
+    width:100px;
+    height:100px
+}
+.tagline{
+    font-family: 'Varela Round', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color:rgb(255,255,251)
+}
