--- a/src/components/appStyle.module.css
+++ b/src/components/appStyle.module.css
@@ -4,14 +4,15 @@ body{
 .mainContainer{
     margin:0 auto;
     border: 4px solid;
-    margin-top:40px;
+    margin-top:100px;
     border-radius: 4px;
     background-color: rgb(55,58,93);
-    width: 500px;
+    width: 700px;
+   
 }
 .mainHeading{
     font-family: 'Varela Round', sans-serif;
-    font-size: 20px;
+    font-size: 40px;
     font-weight: 700;
     padding-top: 20px;
     padding-left: 5px;
@@ -19,11 +20,17 @@ body{
 }
 .searchBox{
     border-radius: 5px;
+    width:250px;
+    height:25px;
+    font-size: 13px;
     border:none;
     font-family: 'Varela Round', sans-serif;
 }
 .searchBoxnotify{
     border-radius: 5px;
+    width:250px;
+    font-size: 13px;
+    height:25px;
     border:none;
     box-shadow: 0 0 2.5px 2.5px red;
     font-family: 'Varela Round', sans-serif;
@@ -32,28 +39,30 @@ body{
 .button{
     border-radius: 5px;
     border:none;
-    font-size: 10px;
+    font-size: 13px;
     margin-top: 0px;
     margin-right: 5px;
     margin-left: 5px;
-    height:16px;
+    height:25px;
+    font-weight: 700;
     font-family: 'Varela Round', sans-serif;
     background-color:rgb(255,255,255);
 }
 .button2{
     border-radius: 5px;
     border:none;
-    font-size: 10px;
+    font-size: 13px;
     margin-top: 0px;
     margin-right: 5px;
     margin-left: 5px;
     box-shadow: 0 0 2.5px 2.5px red;
-    height:16px;
+    height:25px;
+    font-weight: 700;
     font-family: 'Varela Round', sans-serif;
     background-color:rgb(255,255,255);
 }
 .todos{
-    min-height:30px;
+    min-height:50px;
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom:20px;
@@ -71,41 +80,42 @@ body{
 }
 
 .titleicon{
-    width:50px;
+    width:80px;
     display: inline;
 
 }
 .toggleicon{
-    width:15px;
+    width:20px;
     display:inline  ;
     position: absolute;
-    top:10px;
+    top:18px;
     left:30px;
 }
 .deleteicon{
-    width:15px;
+    width:25px;
     position: absolute;
-    top:10px;
-    right:10px;
+    top:15px;
+    right:8px;
 }
 .editicon{
-    width:13px; 
+    width:22px; 
     position: absolute;
-    top:10px;
-    right:25px;
+    top:15px;
+    right:33px;
 }
 .content{
-    padding-top: 5px;
+    padding-top: 16px;
+    font-size:20px ;
     font-family: 'Varela Round', sans-serif;
     
 }
 .emoji{
-    width:100px;
-    height:100px
+    width:200px;
+   
 }
 .tagline{
     font-family: 'Varela Round', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
     color:rgb(255,255,251)
 }
