--- a/src/components/appStyle.module.css
+++ b/src/components/appStyle.module.css
@@ -66,16 +66,19 @@ body{
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom:20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     width:60%;
     height: fit-content;
     border:none;
     border-radius: 5px;
     background-color: rgb(255,255,255);
     position: relative;
+}
+.todoContent{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
 }
 .headContainer{
     display: flex;
